@@ -1,3 +1,13 @@
+2011-02-01  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Unreviewed Qt buildfix after r77286.
+
+        https://bugs.webkit.org/show_bug.cgi?id=53520 
+        Remove the physical terminology from IntRect and FloatRect.
+
+        * WebCoreSupport/PopupMenuQt.cpp:
+        (WebCore::PopupMenuQt::show):
+
 2011-01-31  No'am Rosenthal  <noam.rosenthal@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
